fix title padding on small breakpoints

--- a/res/globals.css
+++ b/res/globals.css
@@ -165,6 +165,13 @@ p > img {
     margin-bottom: 20px;
 }
 
+
+
+div#content.use-ibm > p, div#content.use-ibm > a {
+    font-family: "IBM VGA";
+    font-size: 16px;
+}
+
 @media only screen and (max-width: 467px) {
     .container {
         margin: 10px auto 0;
@@ -200,11 +207,10 @@ p > img {
     .highlighted {
         padding: 5px 15px;
     }
-}
 
-div#content.use-ibm > p, div#content.use-ibm > a {
-    font-family: "IBM VGA";
-    font-size: 16px;
+    .title-container {
+        padding: 5px;
+    }
 }
 
 @media only screen and (max-width: 341px) {
